# dino

./: .gitignore  CMakeLists.txt  build.bat
Visual/: dino_run_1.txt  dino_run_2.txt  frames _provisory.h  frames.h  imagem.c  mostra_cor_rgb_pixel.c  obstacles_big_building.txt  obstacles_house.txt  obstacles_plane.txt  obstacles_small_building.txt
assets/: frames.c  stb_image.h
src/: info.h  main.c
src/core/: game.c  game.h  matrix.c  matrix.h  run.c  run.h
src/events/: events.c  events.h
src/graphics/: frames.h  frames_provisory.h  render.c  render.h
src/score/: score.c  score.h
src/utils/: matrix.c  matrix.h  utils.c  utils.h
src/worldgen/: game.c  game.h  word_gen.c  world_gen.c  world_gen.h  worldgen.c  worldgen.h
